test/zinc_source/compile_errors/concurrency/06_chan_non_integer_capacity.zn
// expected-error: chan\(\) capacity must be an integer

fn main() {
    values = chan(true)
}
